--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,14 @@
 .nav{
     grid-area: n;
     background-color: rgb(0, 255, 149);
+    padding: 20px;
   }
 
-  .item{
+  .item a{
       color: white;
       text-decoration: none;
   }
 
-  .item.active{
+ a.active{
       color: gold;
   }
